<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/colorAccent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_food"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/selectedFoodTextView"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
            android:layout_marginTop="30dp" android:fontFamily="@font/muli_bold"/>

    <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp" app:srcCompat="@drawable/dd_logo"
            android:id="@+id/imageViewLogo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="48dp"/>

    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/decideButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/muli_bold"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:text="@string/decide"/>

    <EditText
            android:layout_width="300dp"
            android:layout_height="22dp"
            android:id="@+id/addFoodEditText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:fontFamily="@font/muli_bold"
            app:layout_constraintTop_toBottomOf="@+id/selectedFoodTextView"
            android:layout_marginTop="40dp"
            android:hint="@string/hungry_for"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" android:background="@android:color/background_light"/>

    <Button
            android:text="@string/add_food"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/addFoodButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="14sp"
            android:textColor="@android:color/background_light"
            app:layout_constraintTop_toBottomOf="@+id/addFoodEditText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/colorPrimary" android:layout_margin="24dp"/>
    <Button
            android:text="@string/first_alpha"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/alphaButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/newestButton" android:background="@color/colorPrimary"
            android:fontFamily="@font/muli_bold" android:textColor="@android:color/background_light"
            android:textSize="18sp" android:layout_marginBottom="8dp"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/newestButton"
            app:layout_constraintBottom_toTopOf="@+id/decideButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/newest_food"
            android:background="@color/colorPrimary" android:fontFamily="@font/muli_bold"
            android:textColor="@android:color/background_light" android:textSize="18sp"
            android:layout_marginBottom="8dp"/>

</android.support.constraint.ConstraintLayout>